--- a/src/styles/cover.css
+++ b/src/styles/cover.css
@@ -1,3 +1,4 @@
+.home-intro a,
 .vp-doc a {
   color: var(--link-color) !important;
   box-shadow: 0 1px 0 var(--link-underline-shadow);
@@ -6,16 +7,55 @@
   text-decoration: none !important;
 }
 
+.home-intro a:hover,
 .vp-doc a:hover {
   color: var(--link-hover-color) !important;
   box-shadow: 0 2px 0px 0 var(--link-hover-underline-color);
   font-weight: 700 !important;
 }
 
+.vp-doc h2 {
+  border-top: none;
+  padding-top: 0;
+}
+
+.outline-link.active {
+  color: var(--link-hover-underline-color) !important;
+}
+
+/* Doc.tsx  */
+.VPDocFooter {
+  visibility: hidden;
+}
+
+.VPDoc .content {
+  padding-bottom: 0;
+}
+
+.VPDocAside {
+  @apply lg:w-[200px];
+}
+
+.aside {
+  @apply left-24;
+}
+
+.doc-meta {
+  @apply lg:ml-24;
+}
+
+.VPDocAside .content {
+}
+
+.VPDoc .main {
+  @apply lg:w-[700px] md:w-[650px];
+}
+/* end */
+
 header > h1 {
   font-weight: 800;
   font-size: 2.25em;
   margin-top: 0;
-  margin-bottom: 0.8888889em;
+  margin-bottom: 0.388889em;
   line-height: 1.1111111;
 }
