--- a/src/styles/font.css
+++ b/src/styles/font.css
@@ -58,7 +58,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: var(--smileySans);
+  font-family: var(--wenkai);
 }
 
 li,
@@ -67,9 +67,16 @@ p {
   font-size: 18px !important;
 }
 
+.outline-link {
+  font-family: var(--vp-font-family-base);
+  font-size: 14px !important;
+  text-decoration: none;
+}
+
 code {
   font-family: var(--jet) !important;
-  font-size: 13px !important;
+  font-size: 14px !important;
+  line-height: 1.4;
 }
 
 .custom-block-title {
