--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -17,10 +17,20 @@
   --vp-c-text-code: var(--vp-c-text-1);
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "LXGW WenKai Screen", Calibri, Arial, sans-serif;
+}
+
 .VPNavBarTitle .title {
   font-family: "f1Font-Bold";
   font-weight: bold !important;
   font-size: 28px !important;
+  font-synthesis: weight !;
 }
 
 .custom-block.details summary {
@@ -57,6 +67,6 @@ li {
   color: var(--vp-custom-block-tip-text) !important;
 }
 
-.VPDoc .container {
-  @apply pr-[12rem];
+.aside {
+  @apply ml-20;
 }
