--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: jinkaiFont;
-  src: url("https://cdn.jsdelivr.net/gh/fzdwx/get@0.15/font/jinkai2.woff2");
+  src: url("https://cdn.jsdelivr.net/gh/fzdwx/get@0.15/font/jinkai.woff2");
 }
 
 @font-face {
