--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -74,3 +74,11 @@ li {
 .post-entry {
   background-color: transparent;
 }
+
+
+.line-clamp-3 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+}
