--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,7 +1,8 @@
+@import url('https://fonts.cdnfonts.com/css/cyberway-riders');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 
 /*@font-face {*/
 /*    font-family: jinkaiFont;*/
@@ -11,6 +12,12 @@
 @font-face {
     font-family: f1Font-Bold;
     src: url("https://cdn.jsdelivr.net/gh/fzdwx/get@0.15/font/f2.woff2");
+}
+
+
+
+.cyberwayRiders{
+    font-family: 'Cyberway Riders', sans-serif !important;
 }
 
 :root {
