--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -119,3 +119,7 @@ code {
 .prose :where(blockquote p:first-of-type):not(:where([class~="not-prose"] *)) {
     @apply not-italic;
 }
+
+.max-w-200px{
+    max-width: 200px;
+}
