--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -99,12 +99,10 @@ h6 .header-anchor:focus {
 }
 
 code {
-    padding: 0.2em 0.4em;
-    margin: 0;
-    font-size: 85%;
+    padding: 0.25rem;
+    border-radius: 0.25rem;
     white-space: break-spaces;
-    background-color: rgba(175, 184, 193, 0.2);
-    border-radius: 6px;
+    background-color: rgba(230,230,230,0.75);
 }
 
 .github-light {
